[tool.poetry]
name = "MyTronome"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Bert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/MyTronome"
homepage = "https://github.com/etijskens/MyTronome"

keywords = []

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
beat = "mytronome:cli_beat.main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
